add meeting notes

--- a/meetings/2021.02.09-lazy-norm.md
+++ b/meetings/2021.02.09-lazy-norm.md
@@ -1,4 +1,4 @@
-# cg meeting 09.02.2020
+# cg meeting 09.02.2020 ([zulip thread](https://rust-lang.zulipchat.com/#narrow/stream/260443-project-const-generics/topic/meeting.202021-02-09))
 
 *mostly taken from https://hackmd.io/9LIywezOQj-h5HX8vvEnSw?view*
 
