--- a/meetings/2021.02.16-lazy-norm.md
+++ b/meetings/2021.02.16-lazy-norm.md
@@ -1,4 +1,4 @@
-# cg meeting 2021-02-16
+# cg meeting 2021-02-16 ([zulip thread](https://rust-lang.zulipchat.com/#narrow/stream/260443-project-const-generics/topic/meeting.202021-02-16))
 
 ## issue
 
