--- a/meetings/2021.02.16-lazy-norm.md
+++ b/meetings/2021.02.16-lazy-norm.md
@@ -19,7 +19,7 @@ fn main() {
 }
 ```
 and https://github.com/rust-lang/rust/issues/78369:
-```rust=
+```rust
 #![feature(lazy_normalization_consts)]
 // `1 + 4` now "depends on T", preventing us from
 // being able to unsize `P` here.
